--- a/app/design/frontend/pc/default/template/persistent/remember_me.phtml
+++ b/app/design/frontend/pc/default/template/persistent/remember_me.phtml
@@ -24,17 +24,18 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<div class="block block-login">
-    <div class="block-title">
-        <strong><span><?php echo $this->__('Login') ?></span></strong>
+<?php
+/**
+ * Customer "Remember Me" template
+ *
+ * @var $this Mage_Persistent_Block_Form_Remember
+ */
+?>
+<li id="remember-me-box" class="control">
+    <?php $rememberMeId = 'remember_me' . Mage::helper('core')->getRandomString(10); ?>
+    <div class="input-box">
+        <input type="checkbox" name="persistent_remember_me" class="checkbox" id="<?php echo $rememberMeId; ?>"<?php if ($this->isRememberMeChecked()): ?> checked="checked"<?php endif; ?> title="<?php echo Mage::helper('core')->quoteEscape($this->__('Remember Me')) ?>" />
     </div>
-    <form action="<?php echo $this->getPostActionUrl() ?>" method="post">
-        <div class="block-content">
-            <label for="mini-login"><?php echo $this->__('Email:') ?></label><input type="text" name="login[username]" id="mini-login" class="input-text" />
-            <label for="mini-password"><?php echo $this->__('Password:') ?></label><input type="password" name="login[password]" id="mini-password" class="input-text" />
-            <div class="actions">
-                <button type="submit" class="button"><span><span><?php echo $this->__('Login') ?></span></span></button>
-            </div>
-        </div>
-    </form>
-</div>
+    <label for="<?php echo $rememberMeId; ?>"><?php echo $this->__('Remember Me') ?></label>
+    <a class="link-tip" href="#"><?php echo $this->__('What\'s this?') ?></a>
+</li>
