--- a/skin/frontend/pc/default/scss/styles.scss
+++ b/skin/frontend/pc/default/scss/styles.scss
@@ -30,4 +30,10 @@
 
 @import "_header.scss";
 @import "_footer.scss";
+
+
 @import "_home.scss";
+
+@import "_customer.scss";
+
+@import "_category.scss";
