--- a/skin/frontend/pc/default/scss/_category.scss
+++ b/skin/frontend/pc/default/scss/_category.scss
@@ -2,5 +2,54 @@
 
     .breadcrumbs{
         margin: 5px 0;
+        font-size: 12px;
+        height: 30px;
+
+        ul{
+            position: relative;
+            display: inline-block;
+            float: left;
+            height:30px;
+            z-index:1;
+            border-left: 1px solid #ccc;
+
+            li{
+                display: inline-block;
+                float: left;
+                position:relative;
+                background: url(../images/commont/bread_bg_f.png) no-repeat center right;
+                height: 30px;
+                line-height: 30px;
+                padding:0 15px;
+                z-index:3;
+
+                &.last{
+                    background: url(../images/commont/bread_bg_3.png) no-repeat center right;
+                    color:#fff;
+                    left:-7px;
+                    z-index:2;
+                    padding-left:22px;
+                }
+            }
+
+            .home{
+                margin-left:0;
+            }
+        }
+
+        .share{
+            float:right;
+
+            &>span{
+                float: left;
+            }
+
+            .addthis_sharing_toolbox{
+                float: right;
+                height: 30px;
+                overflow: hidden;
+                padding: 2px 0 0 5px;
+            }
+        }
     }
 }
