--- a/skin/frontend/pc/default/scss/styles.css
+++ b/skin/frontend/pc/default/scss/styles.css
@@ -2618,6 +2618,12 @@ tr.summary-details-excluded { font-style: italic; }
 .register_page .register .require { color: #990000; margin-right: 5px; vertical-align: sub; }
 .register_page .register .indicates { color: #666; font-size: 10px; }
 
-.page .breadcrumbs { margin: 5px 0; }
-
+.page .breadcrumbs { margin: 5px 0; font-size: 12px; height: 30px; }
+.page .breadcrumbs ul { position: relative; display: inline-block; float: left; height: 30px; z-index: 1; border-left: 1px solid #ccc; }
+.page .breadcrumbs ul li { display: inline-block; float: left; position: relative; background: url(../images/commont/bread_bg_f.png) no-repeat center right; height: 30px; line-height: 30px; padding: 0 15px; z-index: 3; }
+.page .breadcrumbs ul li.last { background: url(../images/commont/bread_bg_3.png) no-repeat center right; color: #fff; left: -7px; z-index: 2; padding-left: 22px; }
+.page .breadcrumbs ul .home { margin-left: 0; }
+.page .breadcrumbs .share { float: right; }
+.page .breadcrumbs .share > span { float: left; }
+.page .breadcrumbs .share .addthis_sharing_toolbox { ffloat: right; height: 30px; overflow: hidden; padding: 2px 0 0 5px; }
 /*# sourceMappingURL=styles.css.map */
