--- a/app/design/frontend/pc/default/template/page/2columns-left.phtml
+++ b/app/design/frontend/pc/default/template/page/2columns-left.phtml
@@ -37,6 +37,7 @@
 <body<?php echo $this->getBodyClass()?' class="'.$this->getBodyClass().'"':'' ?>>
 <?php echo $this->getChildHtml('after_body_start') ?>
 <div class="wrapper">
+    <div class="top_bg"></div>
     <?php echo $this->getChildHtml('global_notices') ?>
     <div class="page">
         <?php echo $this->getChildHtml('header') ?>
