--- a/app/design/frontend/pc/default/layout/catalog.xml
+++ b/app/design/frontend/pc/default/layout/catalog.xml
@@ -69,9 +69,6 @@ Category default layout
 
     <catalog_category_default translate="label">
         <label>Catalog Category (Non-Anchor)</label>
-        <reference name="left">
-            <block type="catalog/navigation" name="catalog.leftnav" after="currency" template="catalog/navigation/left.phtml"/>
-        </reference>
         <reference name="content">
             <block type="catalog/category_view" name="category.products" template="catalog/category/view.phtml">
                 <block type="catalog/product_list" name="product_list" template="catalog/product/list.phtml">
@@ -85,6 +82,9 @@ Category default layout
                     <action method="addColumnCountLayoutDepend"><layout>three_columns</layout><count>3</count></action>
                     <action method="setToolbarBlockName"><name>product_list_toolbar</name></action>
                 </block>
+                <block type="reports/product_viewed" name="product_viewed" template="catalog/category/product_viewed.phtml" />
+                <block type="catalog/layer_view" name="catalog_layer" template="catalog/layer/view.phtml"/>
+                <block type="catalog/navigation" name="catalog_children" after="currency" template="catalog/navigation/left.phtml"/>
             </block>
         </reference>
     </catalog_category_default>
@@ -95,16 +95,11 @@ Category layered navigation layout
 
     <catalog_category_layered translate="label">
         <label>Catalog Category (Anchor)</label>
-        <reference name="left">
-            <block type="catalog/layer_view" name="catalog.leftnav" after="currency" template="catalog/layer/view.phtml"/>
-        </reference>
         <reference name="content">
             <block type="catalog/category_view" name="category.products" template="catalog/category/view.phtml">
                 <block type="catalog/product_list" name="product_list" template="catalog/product/list.phtml">
-                    <!-- <action method="addReviewSummaryTemplate"><type>default</type><template>review/helper/su.phtml</template></action> -->
                     <block type="catalog/product_list_toolbar" name="product_list_toolbar" template="catalog/product/list/toolbar.phtml">
                         <block type="page/html_pager" name="product_list_toolbar_pager" template="catalog/product/list/pager.phtml"/>
-
                     </block>
                     <action method="addColumnCountLayoutDepend"><layout>empty</layout><count>6</count></action>
                     <action method="addColumnCountLayoutDepend"><layout>one_column</layout><count>5</count></action>
@@ -113,6 +108,9 @@ Category layered navigation layout
                     <action method="addColumnCountLayoutDepend"><layout>three_columns</layout><count>3</count></action>
                     <action method="setToolbarBlockName"><name>product_list_toolbar</name></action>
                 </block>
+                <block type="reports/product_viewed" name="product_viewed" template="catalog/category/product_viewed.phtml" />
+                <block type="catalog/layer_view" name="catalog_layer" template="catalog/layer/view.phtml"/>
+                <block type="catalog/navigation" name="catalog_children" after="currency" template="catalog/navigation/left.phtml"/>
             </block>
         </reference>
     </catalog_category_layered>
