--- a/app/design/frontend/pc/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/list.phtml
@@ -1,8 +1,15 @@
 <?php
     $_productCollection=$this->getLoadedProductCollection();
     $_helper = $this->helper('catalog/output');
-?>
 
+    $categoryId = (int) $this->getRequest()->getParam('id', false);
+
+    $category = Mage::getModel('catalog/category')
+        ->setStoreId(Mage::app()->getStore()->getId())
+        ->load($categoryId);
+?>
+<div class="category_name">
+    <span><?php echo $category->getName() ?></span>
     <span>(<?php echo $_productCollection->getSize(); ?>)</span>
 </div>
 
@@ -113,18 +120,30 @@
             <ul class="products-grid">
             <?php endif ?>
                 <li class="item<?php if(($i-1)%$_columnCount==0): ?> first<?php elseif($i%$_columnCount==0): ?> last<?php endif; ?>">
+
+
                     <a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image"><img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(135); ?>" width="135" height="135" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" /></a>
+
+
                     <h2 class="product-name"><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a></h2>
+
+
                     <?php if($_product->getRatingSummary()): ?>
                     <?php echo $this->getReviewsSummaryHtml($_product, 'short') ?>
                     <?php endif; ?>
+
+
                     <?php echo $this->getPriceHtml($_product, true) ?>
+
+
                     <div class="actions">
                         <?php if($_product->isSaleable()): ?>
                             <button type="button" title="<?php echo Mage::helper('core')->quoteEscape($this->__('Add to Cart')) ?>" class="button btn-cart" onclick="setLocation('<?php echo $this->getAddToCartUrl($_product) ?>')"><span><span><?php echo $this->__('Add to Cart') ?></span></span></button>
                         <?php else: ?>
                             <p class="availability out-of-stock"><span><?php echo $this->__('Out of stock') ?></span></p>
                         <?php endif; ?>
+
+
                         <ul class="add-to-links">
                             <?php if ($this->helper('wishlist')->isAllow()) : ?>
                                 <li><a href="<?php echo $this->helper('wishlist')->getAddUrl($_product) ?>" class="link-wishlist"><?php echo $this->__('Add to Wishlist') ?></a></li>
@@ -133,6 +152,8 @@
                                 <li><span class="separator">|</span> <a href="<?php echo $_compareUrl ?>" class="link-compare"><?php echo $this->__('Add to Compare') ?></a></li>
                             <?php endif; ?>
                         </ul>
+
+
                     </div>
                 </li>
             <?php if ($i%$_columnCount==0 || $i==$_collectionSize): ?>
@@ -150,3 +171,12 @@
 
 
 <?php endif; ?>
+
+
+
+
+
+<div class="category_name">
+    <span><?php echo $category->getName() ?></span>
+    <span>(<?php echo $_productCollection->getSize(); ?>)</span>
+</div>
