--- a/app/design/frontend/pc/default/template/catalog/category/product_viewed.phtml
+++ b/app/design/frontend/pc/default/template/catalog/category/product_viewed.phtml
@@ -1,5 +1,8 @@
 <?php if ($_products = $this->getRecentlyViewedProducts()): ?>
-
+<div class="box_shadow">
+    <div class="category_name_bottom">
+        <span>Recently Viewed</span>
+    </div>
 
     <div class="home_product owl-carousel">
 
@@ -44,5 +47,5 @@
                 });
             });
         </script>
-
+</div>
 <?php endif; ?>
