--- a/skin/frontend/pc/default/scss/_category.scss
+++ b/skin/frontend/pc/default/scss/_category.scss
@@ -270,7 +270,7 @@
 
 
     .pagination{
-        margin: 0 0 20px;
+        
         ol{
             padding-top: 5px;
             height: 37px;font-size: 14px;text-align: center;
@@ -317,7 +317,7 @@
         box-shadow: 0 0 30px #ccc;
         padding:10px;
         border-radius:5px;
-        margin-bottom: 15px;
+        margin: 15px 0;
 
         .category_name_bottom{
             border-bottom: 1px solid #e4e4e4;
