--- a/app/design/frontend/pc/default/template/page/html/breadcrumbs.phtml
+++ b/app/design/frontend/pc/default/template/page/html/breadcrumbs.phtml
@@ -16,7 +16,7 @@
 
             <?php elseif($_crumbInfo['last']): ?>
 
-                <strong><?php echo $this->escapeHtml($_crumbInfo['label']) ?></strong>
+                <strong style="left:<?php echo (-8*$j);$j++;?>px;"><?php echo $this->escapeHtml($_crumbInfo['label']) ?></strong>
 
             <?php else: ?>
 
