--- a/app/design/frontend/pc/default/layout/catalog.xml
+++ b/app/design/frontend/pc/default/layout/catalog.xml
@@ -83,8 +83,7 @@ Category default layout
                     <action method="setToolbarBlockName"><name>product_list_toolbar</name></action>
                 </block>
                 <block type="reports/product_viewed" name="product_viewed" template="catalog/category/product_viewed.phtml" />
-                <block type="catalog/layer_view" name="catalog_layer" template="catalog/layer/view.phtml"/>
-                <block type="catalog/navigation" name="catalog_children" after="currency" template="catalog/navigation/left.phtml"/>
+                <block type="catalog/navigation" name="catalog_children"  template="catalog/navigation/left.phtml"/>
             </block>
         </reference>
     </catalog_category_default>
@@ -109,8 +108,7 @@ Category layered navigation layout
                     <action method="setToolbarBlockName"><name>product_list_toolbar</name></action>
                 </block>
                 <block type="reports/product_viewed" name="product_viewed" template="catalog/category/product_viewed.phtml" />
-
-                <block type="catalog/navigation" name="catalog_children" after="currency" template="catalog/navigation/left.phtml"/>
+                <block type="catalog/navigation" name="catalog_children"  template="catalog/navigation/left.phtml"/>
             </block>
         </reference>
     </catalog_category_layered>
@@ -153,7 +151,7 @@ Product view
         <reference name="head">
             <action method="addJs"><script>varien/product.js</script></action>
             <action method="addJs"><script>varien/configurable.js</script></action>
-
+            <action method="addJs"><script>zoom/estorm-zoom-0.0.1.js</script></action>
             <action method="addItem"><type>js_css</type><name>calendar/calendar-win2k-1.css</name><params/><!--<if/><condition>can_load_calendar_js</condition>--></action>
             <action method="addItem"><type>js</type><name>calendar/calendar.js</name><!--<params/><if/><condition>can_load_calendar_js</condition>--></action>
             <action method="addItem"><type>js</type><name>calendar/calendar-setup.js</name><!--<params/><if/><condition>can_load_calendar_js</condition>--></action>
@@ -224,11 +222,12 @@ Product view
                 </block>
                 <action method="unsetCallChild"><child>container1</child><call>ifEquals</call><if>0</if><key>alias_in_layout</key><key>options_container</key></action>
                 <action method="unsetCallChild"><child>container2</child><call>ifEquals</call><if>0</if><key>alias_in_layout</key><key>options_container</key></action>
+
+                <block type="catalog/product_list_related" name="catalog.product.related" template="catalog/product/list/related.phtml"/>
+                <block type="reports/product_viewed" name="product_viewed" template="catalog/category/product_viewed.phtml" />
             </block>
         </reference>
-        <reference name="right">
-            <block type="catalog/product_list_related" name="catalog.product.related" before="-" template="catalog/product/list/related.phtml"/>
-        </reference>
+
     </catalog_product_view>
 
 <!--
