--- a/skin/frontend/pc/default/scss/styles.css
+++ b/skin/frontend/pc/default/scss/styles.css
@@ -1261,10 +1261,6 @@ tr.summary-details-excluded { font-style: italic; }
 
 .add-to-box .add-to-links li .separator { display: none !important; }
 
-.product-view { border: 1px solid #c4c6c8; }
-
-.product-essential { padding: 25px; background: #fff url(../images/bkg_product-view.gif) 100% 0 no-repeat; }
-
 .product-essential h2 { font: bold 13px/1.35 Arial, Helvetica, sans-serif; }
 
 .product-collateral { background: #faf7ee url(../images/bkg_product_collateral.gif) 0 0 repeat-x; padding: 25px; }
@@ -1274,7 +1270,7 @@ tr.summary-details-excluded { font-style: italic; }
 .product-collateral .box-collateral { margin: 0 0 25px; }
 
 /* Product Images */
-.product-view .product-img-box { float: left; width: 267px; }
+.product-view .product-img-box { float: left; }
 
 .col3-layout .product-view .product-img-box { float: none; margin: 0 auto; }
 
@@ -2621,8 +2617,9 @@ tr.summary-details-excluded { font-style: italic; }
 
 .page .breadcrumbs { font-size: 12px; height: 30px; }
 .page .breadcrumbs ul { position: relative; display: inline-block; float: left; height: 30px; z-index: 1; border-left: 1px solid #ccc; }
-.page .breadcrumbs ul li { display: inline-block; float: left; position: relative; background: url(../images/commont/bread_bg_f.png) no-repeat center right; height: 30px; line-height: 30px; padding: 0 15px; }
+.page .breadcrumbs ul li { display: inline-block; float: left; position: relative; background: url(../images/commont/bread_bg_f.png) no-repeat center right; height: 30px; line-height: 30px; padding: 0 15px; max-width: 600px; }
 .page .breadcrumbs ul li.last { background: url(../images/commont/bread_bg_3.png) no-repeat center right; color: #fff; }
+.page .breadcrumbs ul li strong { display: inline-block; float: left; background: #333333; position: relative; padding-left: 30px; height: 30px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; width: 100%; }
 .page .breadcrumbs ul .home { margin-left: 0; }
 .page .breadcrumbs .share { float: right; }
 .page .breadcrumbs .share > span { float: left; }
@@ -2677,5 +2674,31 @@ tr.summary-details-excluded { font-style: italic; }
 #day_show { float: left; line-height: 49px; color: #c71c60; font-size: 32px; margin: 0 10px; font-family: Arial,Helvetica,sans-serif; }
 
 .item-title .unit { background: none; line-height: 49px; font-size: 24px; padding: 0 10px; float: left; }
+
+.estorm-zoom { width: 400px; float: left; clear: both; background: #ffffff; }
+
+.estorm-zoom-stage { width: 300px; height: 400px; float: right; position: relative; cursor: all-scroll; }
+
+.estorm-zoom .arrow { width: 30px; height: 47px; display: block; text-indent: -9999px; overflow: hidden; position: absolute; background-image: url(../images/commont/arrow.png); background-repeat: no-repeat; top: 50px; }
+
+.estorm-zoom .arrow-prev { left: 0; background-position: 0 0; }
+
+.estorm-zoom .arrow-prev:hover { background-position: 0 -47px; }
+
+.estorm-zoom .arrow-next { right: 0; background-position: -30px 0; }
+
+.estorm-zoom .arrow-next:hover { background-position: -30px -47px; }
+
+.estorm-zoom-gallery { width: 100px; height: 400px; float: left; position: relative; overflow: hidden; }
+
+.estorm-zoom-gallery ul { position: absolute; top: 0; margin: 0; padding: 0; list-style: none; }
+
+.estorm-zoom-gallery li { float: left; margin: 0; list-style: none; padding: 0; border: 4px #ffffff solid; }
+
+.estorm-zoom-gallery li.current { border-color: #ffcc00; }
+
+.estorm-zoom-gallery li img { border: 1px #eeeeee solid; display: block; }
+
+header, .product-shop { opacity: 0; }
 
 /*# sourceMappingURL=styles.css.map */
